# bulk-mailer

./: README.md  pyproject.toml
bulk_mailer/: __init__.py  bulk_mailer.py  cli.py  email.py  log.py  utils.py
