[tool.poetry]
name = "bulk-mailer"
version = "0.1.0"
description = "A simple program to send bulk mails"
authors = ["Andre Lehmann <aisberg@posteo.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
envelope = "^1.3"
html2text = "^2020.1.16"
jinja2 = "^2.10.0"
mistune = "^0.8.0"
python = "^3.6"
python-frontmatter = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"

[tool.poetry.scripts]
bulk-mailer = "bulk_mailer.cli:main"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
